--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "element-ui": "^2.4.0",
         "nrm": "^1.0.2",
         "vue": "^2.5.2",
-        "vue-router": "^3.0.1"
+        "vue-router": "^3.0.1",
+        "echarts":"4.1.0",
+        "zrender":"4.0.4"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
