--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
         "nrm": "^1.0.2",
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
-        "echarts":"4.1.0",
-        "zrender":"4.0.4"
+        "echarts": "4.1.0",
+        "zrender": "4.0.4",
+        "vuex":"^3.0.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
