--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "echarts": "4.1.0",
         "element-ui": "^2.4.0",
-        "nrm": "^1.0.2",
+        "nrm": "^1.1.0",
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
-        "echarts": "4.1.0",
-        "zrender": "4.0.4",
-        "vuex":"^3.0.1"
+        "vuex": "^3.0.1",
+        "zrender": "4.0.4"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
